--- a/style/g3.css
+++ b/style/g3.css
@@ -27,6 +27,20 @@ body{
     font-size: 1.25rem;
 }
 
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+.same-para{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: normal;
+}
+
 /* Nav-bar styles */
 
 .navbar{
@@ -66,9 +80,74 @@ body{
 .banner-img{
     width: 100%;
 }
+
+/* team & feature styles */
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+#quick-list{
+    color: #727272;
+    font-size: 4rem;
+    font-weight: 500;
+}
+#of-our{
+    color: #131313;
+    font-size: 4rem;
+    font-weight: bold;
+}
+#feature{
+    color: #FF900E;
+    font-size: 4rem;
+    font-weight: bold;
+}
+/* .feature-description{
+    margin-bottom: 32px;
+    color: #727272;
+    font-size: 1rem;
+    font-weight: normal;
+} */
+
+/* section facts style */
+.facts-title{
+    color: #131313;
+    font-size: 4rem;
+    font-weight: bold;
+}
+/* .facts-description{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: normal;
+} */
 /* Responsive media query */
 @media screen and (max-width:576px){
-    .navbar, .nav-links{
+    .navbar, .nav-links, .teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr) ;
+    }
+    .our-features{
+        margin:20px;
+    }
+}
+
+
+/* medium size devices */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin-left: 50px auto;
     }
 }
