--- a/style/g3.css
+++ b/style/g3.css
@@ -110,12 +110,6 @@ main > section{
     font-size: 4rem;
     font-weight: bold;
 }
-/* .feature-description{
-    margin-bottom: 32px;
-    color: #727272;
-    font-size: 1rem;
-    font-weight: normal;
-} */
 
 /* section facts style */
 .facts-title{
@@ -123,23 +117,72 @@ main > section{
     font-size: 4rem;
     font-weight: bold;
 }
-/* .facts-description{
+.facts-description{
+    max-width: 540px;
+}
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+}
+
+.fact-card{
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    width: 240px;
+    height: 240px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.num{
+    font-size: 2.8rem;
+    font-weight: 600;
+    color: #424242;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
     color: #727272;
-    font-size: 1rem;
-    font-weight: normal;
-} */
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.company-img{
+    filter: grayscale(100%);
+}
 /* Responsive media query */
 @media screen and (max-width:576px){
     .navbar, .nav-links, .teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container, .facts-container, .sponsor-companies{
         grid-template-columns: repeat(1, 1fr) ;
+    }
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
     }
     .our-features{
         margin:20px;
     }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
+    }
 }
+
 
 
 /* medium size devices */
@@ -149,5 +192,15 @@ main > section{
     }
     .our-features{
         margin-left: 50px auto;
+    }
+    .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+        gap: 24px;
+    }
+    .sponsor-companies{
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+        gap: 30px;
     }
 }
