--- a/style/g3.css
+++ b/style/g3.css
@@ -111,6 +111,46 @@ main > section{
     font-weight: bold;
 }
 
+/* hdfughdf */
+
+.features{
+    gap: 100px;
+}
+
+#side-border{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.enjoy-title{
+    color: #131313;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.feature-architect img{
+    width: 100%;
+}
+
+#exp-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -80px;
+    margin-top: -100px;
+}
+
+#exp-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+
 /* section facts style */
 .facts-title{
     color: #131313;
@@ -164,7 +204,7 @@ main > section{
 }
 /* Responsive media query */
 @media screen and (max-width:576px){
-    .navbar, .nav-links, .teams{
+    .navbar, .nav-links, .features, .teams{
         flex-direction: column;
     }
     .team-img-container, .facts-container, .sponsor-companies{
@@ -181,13 +221,17 @@ main > section{
         justify-items: center;
         gap: 50px;
     }
+    #exp-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 
 
 
 /* medium size devices */
 @media screen and (min-width:576px) and (max-width:992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
@@ -202,5 +246,9 @@ main > section{
         grid-template-columns: repeat(2, 1fr);
         justify-items: center;
         gap: 30px;
+    }
+
+    #exp-badge{
+        margin-left: 20px;
     }
 }
