--- a/style/g3.css
+++ b/style/g3.css
@@ -244,8 +244,13 @@ main > section{
     }
     .sponsor-companies{
         grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto auto;
         justify-items: center;
         gap: 30px;
+    }
+    .figma{
+        align-self: center;
+        grid-column: span 2;
     }
 
     #exp-badge{
